modules/vpc/main.tf
resource "aws_vpc" "main"{
    cidr_block = "10.0.0.0/16" 
}
resource "aws_subnet" "public"{
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
}
resource "aws_internet_gateway" "gw"{
    vpc_id = aws_vpc.main.id
}
resource "aws_route_table" "public"{
    vpc_id = aws_vpc.main.id

    route{
        cidr_block = "0.0.0.0/0"
        gateway_id=aws_internet_gateway.gw.id
    }
}
resource "aws_route_table_association" "public"{

    subnet_id=aws_subnet.public.id
    route_table_id=aws_route_table.public.id
}
